# MPSoC-NTM

./: .gitmodules  BOOK.md  BUILD-IT  CMakeLists.txt  README.md  settings64_msim.bat  settings64_msim.sh  settings64_vivado.bat  submodule.sh  upload.sh
configuration/rust/: Cargo.toml  TREE-PKG.txt  TREE-RUST.txt  dependence.md
configuration/rust/application/algebra/scalar/: Cargo.toml
configuration/rust/application/algebra/vector/: Cargo.toml
configuration/rust/application/arithmetic/matrix/: Cargo.toml
configuration/rust/application/arithmetic/scalar/: Cargo.toml
configuration/rust/application/arithmetic/vector/: Cargo.toml
configuration/rust/application/math/matrix/: Cargo.toml
configuration/rust/application/math/vector/: Cargo.toml
opennn/: BUILD-IT  CMakeLists.txt
source/rust/: Cargo.toml  TREE-PKG.txt  TREE-RUST.txt  dependence.md  tree.sh
source/rust/application/algebra/matrix/: Cargo.toml
source/rust/application/algebra/tensor/: Cargo.toml
source/rust/application/arithmetic/tensor/: Cargo.toml
source/rust/application/math/scalar/: Cargo.toml
source/rust/book/: book.md  metadata.md
source/rust/book/demo/rand/: Cargo.toml
source/rust/code/: clean.sh  run2class-class.sh  rust2run-class.sh  rust2run.sh
source/rust/code/arithmetic/: ntm_matrix_arithmetic.rs
source/rust/code/arithmetic/matrix/: ntm_matrix_adder.rs  ntm_matrix_adder.run  ntm_matrix_divider.rs  ntm_matrix_divider.run  ntm_matrix_multiplier.rs  ntm_matrix_multiplier.run
source/rust/code/arithmetic/scalar/: ntm_scalar_adder.rs  ntm_scalar_adder.run  ntm_scalar_divider.rs  ntm_scalar_divider.run  ntm_scalar_multiplier.rs  ntm_scalar_multiplier.run
source/rust/code/arithmetic/tensor/: ntm_tensor_adder.rs  ntm_tensor_adder.run  ntm_tensor_divider.rs  ntm_tensor_divider.run  ntm_tensor_multiplier.rs  ntm_tensor_multiplier.run
source/rust/code/arithmetic/vector/: ntm_vector_adder.rs  ntm_vector_adder.run  ntm_vector_divider.rs  ntm_vector_divider.run  ntm_vector_multiplier.rs  ntm_vector_multiplier.run
source/rust/code/controller/: ntm_lstm_controller.rs
source/rust/code/dnc/memory/: dnc_addressing.run  dnc_allocation_weighting.run  dnc_backward_weighting.run  dnc_forward_weighting.run  dnc_matrix_content_based_addressing.run  dnc_memory_matrix.run  dnc_memory_retention_vector.run  dnc_precedence_weighting.run  dnc_read_content_weighting.run  dnc_read_vectors.run  dnc_read_weighting.run  dnc_sort_vector.run  dnc_temporal_link_matrix.run  dnc_usage_vector.run  dnc_vector_content_based_addressing.run  dnc_write_content_weighting.run  dnc_write_weighting.run
source/rust/code/dnc/top/: dnc_interface_matrix.run  dnc_interface_top.run  dnc_interface_vector.run  dnc_output_vector.run  dnc_top.run
source/rust/code/dnc/trained/: dnc_trained_top.run
source/rust/code/ntm/memory/: ntm_addressing.run  ntm_matrix_content_based_addressing.run  ntm_vector_content_based_addressing.run
source/rust/code/ntm/read_heads/: ntm_reading.run
source/rust/code/ntm/top/: ntm_interface_matrix.run  ntm_interface_top.run  ntm_interface_vector.run  ntm_output_vector.run  ntm_top.run
source/rust/code/ntm/trained/: ntm_trained_top.run
source/rust/code/ntm/write_heads/: ntm_erasing.run  ntm_writing.run
source/rust/code/state/feedback/: ntm_state_matrix_feedforward.rs  ntm_state_matrix_feedforward.run  ntm_state_matrix_input.rs  ntm_state_matrix_input.run  ntm_state_matrix_output.rs  ntm_state_matrix_state.rs  (+2 more)
(+20761 files in other folders)
