[workspace]
members = [
"library/arithmetic",

"library/algebra",
"library/math",

#"library/state",

"application/arithmetic/scalar",
"application/arithmetic/vector",
"application/arithmetic/matrix",
"application/arithmetic/tensor",

"application/algebra/scalar",
"application/algebra/vector",
"application/algebra/matrix",
"application/algebra/tensor",
"application/math/scalar",
"application/math/vector",
"application/math/matrix"
]
