[workspace]
members = [
"library/arithmetic",

"library/math",

"library/algebra",

#"library/state",

#"library/nn,

#"library/trainer,

"application/arithmetic/vector",
"application/arithmetic/matrix",
"application/arithmetic/tensor",

"application/math/scalar",
"application/math/vector",
"application/math/matrix",

"application/algebra/scalar",
"application/algebra/vector",
"application/algebra/matrix",
"application/algebra/tensor"
]
