[workspace]
members = [
"library/arithmetic",

"library/math/algebra",
"library/math/calculus",
"library/math/function",
"library/math/statitics",

"library/state",

"application/arithmetic/scalar",
"application/arithmetic/vector",
"application/arithmetic/matrix",
"application/arithmetic/tensor",

"application/math/algebra/scalar",
"application/math/algebra/vector",
"application/math/algebra/matrix",
"application/math/algebra/tensor",
"application/math/calculus/vector",
"application/math/calculus/matrix",
"application/math/calculus/tensor",
"application/math/function/scalar",
"application/math/function/vector",
"application/math/function/matrix",
"application/math/statitics/scalar",
"application/math/statitics/vector",
"application/math/statitics/matrix"
]
